# ozimiz-hackathon

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  manage.py  nginx.conf  pyproject.toml
courses/: admin.py  forms.py  models.py  views.py
courses/migrations/: 0001_initial.py  0002_coursecompletion_course_completed_by.py  0003_alter_course_students.py
ozimiz_hackathon/: asgi.py  models.py  settings.py  urls.py  wsgi.py
static/css/: course_detail.css  course_edit.css  index.css
templates/: course_detail.html  course_edit.html  courses.html  home.html  index.html  login.html  registration.html
